# tmr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compiler.sh
ai/: AIComponent.cpp  AIComponent.h  AIInputComponent.cpp  AIInputComponent.h  AISystem.cpp  AISystem.h  AStarSearch.cpp  AStarSearch.h  CPUPathFindingPhaseParallel.cpp  CPUPathFindingPhaseParallel.h  EntityAI.cpp  EntityAI.h  Graph.cpp  Graph.h  Graph.hpp  MoveEventData.h  MovementComponent.cpp  MovementComponent.h  PathFindingPhase.h  ai_component.cpp  ai_component.h  gheap.hpp  graph.cpp  graph.h  movement_component.cpp  movement_component.h  pathfinder_system.cpp  pathfinder_system.h  pathfinding_system.h  vertex_component.cpp  vertex_component.h
include/tiny_behaviour/: BehaviorTreeBuilder.h
physics/: ArrayInterface.h  BroadphaseInterface.cpp  BroadphaseInterface.h  CPUArray.h  CPUBuffer.h  CPUNarrowphase.cpp  CPUNarrowphase.h  CPUNarrowphaseParallel.cpp  CPUNarrowphaseParallel.h  CPUOctreeBroadphase.cpp  CPUOctreeBroadphase.h  CPUOctreeBroadphaseParallel.cpp  CPUOctreeBroadphaseParallel.h  CPUParallelNarrowphase.h  CPUPhysics.cpp  CPUPhysics.h  CPUPhysicsParallel.cpp  CPUPhysicsParallel.h  CPUPhysicsParallelSorter.cpp  CPUPhysicsParallelSorter.h  CPUPhysicsSorter.cpp  CPUPhysicsSorter.h  CPUSolver.cpp  CPUSolver.h  CPUSolverParallel.cpp  CPUSolverParallel.h  GPUArray.h  GPUBuffer.h  GPUNarrowphase.cpp  GPUNarrowphase.h  GPUOctreeBroadphase.cpp  GPUOctreeBroadphase.h  GPUPhysics.cpp  GPUPhysics.h  GPUPhysicsSorter.cpp  GPUPhysicsSorter.h  GPUSolver.cpp  GPUSolver.h  HelperFunctions.cpp  HelperFunctions.h  (+58 more)
project_resources/: settings.json
project_resources/tmrdata/: animation.json  attack_ability.json  attack_entity.json  attribute1.json  blue_mana.json  damage.json  default_entity.json  fireball.json  fireball_ability.json  frame.json  green_mana.json  health.json  idle1.json  idle2.json  idle_anim.json  main.json  max_speed.json  monster1.json  monster_entity.json  new_monster_entity.json  red_mana.json  shield.json  sound1.json  state1.json  texture.uv  texture1.json  texture10.json  texture11.json  texture12.json  texture13.json  texture2.json  texture3.json  texture4.json  texture5.json  texture6.json  texture7.json  texture8.json  texture9.json  tmp  tmr_decor1_state.json  (+1 more)
rawShaders/: additional.txt  batching.comp  batching2.comp  billboard.vert  calcOverlappingData.comp  calcOverlappingDataToSolver.comp  calcRayIntersect.comp  calcRotationMatrix.comp  checkSamePairs.comp  checkSamePairs2.comp  computeIslandsSize.comp  deferred.frag  deferred.vert  deferredObj.frag  deferredObj.vert  frustumPowerOfTwo.comp  fullscreenquad.frag  fullscreenquad.vert  functions.glsl  geometryOptimizer.comp  gui.frag  gui.vert  human.txt  islands.comp  islands2.comp  iterativeFrustum.comp  map.frag  map.vert  monsterOptimizer.comp  narrowphase.comp  newSolver.comp  obj.frag  obj.vert  occludee.vert  occlusion.frag  occlusion.vert  occlusion2.frag  octree.comp  octree2.comp  octree3.comp  (+47 more)
render/: Core.cpp  Core.h  DecalComponent.cpp  DecalComponent.h  DecalOptimizer.cpp  DecalOptimizer.h  DecalSystem.cpp  DecalSystem.h  Deferred.cpp  Deferred.h  Device.cpp  Device.h  Emitter.h  GPUOptimizers.cpp  GPUOptimizers.h  GraphicComponets.cpp  GraphicComponets.h  GraphicsContainer.cpp  GraphicsContainer.h  ImageResourceContainer.h  Internal.cpp  Internal.h  Makers.cpp  Makers.h  Occlusion.cpp  Occlusion.h  Optimizer.h  Optimizers.cpp  Optimizers.h  ParticleEmitterComponent.cpp  ParticleEmitterComponent.h  ParticleSystem.cpp  ParticleSystem.h  RAII.cpp  RAII.h  Render.h  RenderStage.h  RenderStages.cpp  RenderStages.h  RenderStructures.cpp  (+47 more)
resources/: AbilityTypeLoader.cpp  AbilityTypeLoader.h  AnimationLoader.cpp  AnimationLoader.h  AttributesLoader.cpp  AttributesLoader.h  ComponentCreator.cpp  ComponentCreator.h  ComponentCreators.cpp  ComponentCreators.h  Conflict.cpp  Conflict.h  EffectsLoader.cpp  EffectsLoader.h  EntityCreator.h  EntityCreators.cpp  EntityCreators.h  EntityLoader.cpp  EntityLoader.h  HardcodedLoaders.cpp  HardcodedLoaders.h  ImageLoader.cpp  ImageLoader.h  ItemLoader.cpp  ItemLoader.h  Loader.h  Manager.h  Modification.cpp  Modification.h  ModificationContainer.cpp  ModificationContainer.h  ModificationParser.h  Resource.cpp  Resource.h  ResourceManager.h  ResourceParser.h  Settings.h  StatesLoader.h  abilities_loader.cpp  abilities_loader.h  (+23 more)
resources/tmrdata/: animation.json  main.json  test.json  texture.uv  texture1.json  texture11.json  texture2.json  texture3.json  texture4.json  texture5.json  texture9.json
sound/: Buffer.cpp  Buffer.h  SoundComponent.cpp  SoundComponent.h  SoundData.cpp  SoundData.h  SoundDecoder.cpp  SoundDecoder.h  SoundLoader.cpp  SoundLoader.h  SoundSystem.cpp  SoundSystem.h  Source.cpp  Source.h  alHelpers.cpp  alHelpers.h  sound_component.h  sound_data.cpp  sound_data.h  sound_info.h  sound_loader.cpp  sound_loader.h  sound_system.cpp  sound_system.h
utils/: AbilitiesStruct.h  AbilityComponent.cpp  AbilityComponent.h  AbilityType.cpp  AbilityType.h  Attributes.cpp  Attributes.h  CmdMgr.cpp  CmdMgr.h  CompositeType.h  Console.cpp  Console.h  Controller.h  DelayedTimedWorkSystem.cpp  DelayedTimedWorkSystem.h  DelayedWorkSystem.cpp  DelayedWorkSystem.h  Editable.h  Effect.cpp  Effect.h  Engine.h  EntityComponentSystem.cpp  EntityComponentSystem.h  Event.cpp  Event.h  EventComponent.cpp  EventComponent.h  EventFunctor.h  FileTools.cpp  FileTools.h  Frustum.cpp  Frustum.h  GetSpeedTemFunc.h  Globals.cpp  Globals.h  Health.h  InputComponent.cpp  InputComponent.h  Interaction.cpp  Interaction.h  (+113 more)
